issue #75: implemented controller tests for category and user controller