@@ -26,6 +26,9 @@
             --add-reads org.financer.shared=ALL-UNNAMED
             --add-opens java.base/java.time=com.fasterxml.jackson.databind
             --add-opens org.financer.shared/org.financer.shared.model.db=ALL-UNNAMED
+            --add-opens org.financer.shared/org.financer.shared.domain.model.api.category=ALL-UNNAMED
+            --add-opens org.financer.shared/org.financer.shared.domain.model.api.transaction=ALL-UNNAMED
+            --add-opens org.financer.shared/org.financer.shared.domain.model.api.user=ALL-UNNAMED
             --add-opens org.financer.client.javafx/org.financer.client.javafx.main=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server=ALL-UNNAMED
             --add-opens org.financer.server/org.financer.server.application=ALL-UNNAMED
